# Pterodactyl-LLMServerController

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: keep-alive.yml  run-bot.yml
src/pterodactyl_bot/: __init__.py  ai_chat.py  client.py  command_filter.py  config.py  handler.py  main.py  parser.py  search.py
tests/: test_ai_chat.py  test_command_filter.py  test_parser.py
