[project]
name = "pterodactyl-ai-bot"
version = "1.0.0"
description = "翼龙面板 AI 聊天机器人 - 监听服务器控制台，自动与玩家互动"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Pterodactyl AI Bot"}
]

dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
pterodactyl-bot = "pterodactyl_bot.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
